Ayush | Add min height to card in BOLO

--- a/crowdsource-ui/src/assets/css/home.css
+++ b/crowdsource-ui/src/assets/css/home.css
@@ -405,6 +405,9 @@ body.modal-open .supreme-container {
   #speakers_hours_chart_container, #speakers_hours_chart {
     height: 220px;
  }
+ .card{
+  min-height: 190px !important;
+}
 }
 
 
