--- a/crowdsource-ui/src/assets/css/validator-prompt.css
+++ b/crowdsource-ui/src/assets/css/validator-prompt.css
@@ -117,7 +117,7 @@ a {
       display: none;
     }
    .top-back-btn {
-    top: 39px;
+    top: 25px;
     left: -4px;
    }
 
@@ -329,8 +329,12 @@ a {
 
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px) {
-    .modal-content {
+    #myModal .modal-content {
         width: 100%;
+    }
+
+    #report_sentence_modal .modal-content {
+        width: 96%;
     }
 }
 
