--- a/crowdsource-ui/src/views/modals/report-modal.ejs
+++ b/crowdsource-ui/src/views/modals/report-modal.ejs
@@ -67,7 +67,7 @@
                 </div>
                 <textarea maxlength="1000" id="other_text" class="w-100 p-3 other-reason mb-4" rows="3" placeholder="<%= __('Please specify the reason (Optional)')%>"></textarea>
                 <div class="d-flex justify-content-center">
-                    <button id="report_submit_id" class="btn btn-primary w-75" disabled="disabled"><%= __('SUBMIT')%></button>
+                    <button id="report_submit_id" class="btn btn-primary w-75 border-50" disabled="disabled"><%= __('SUBMIT')%></button>
                 </div>
             </div>
         </div>
