--- a/crowdsource-ui/src/views/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/validator-prompt-page.ejs
@@ -25,7 +25,7 @@
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column">
             <div class="d-flex justify-content-end pt-3 record-btn-container position-relative">
-                <div class="row position-absolute dekho-back-btn top-back-btn">
+                <div class="row position-absolute bolo-back-btn top-back-btn">
                     <button class="btn btn-link p-0 back-btn" id="back-btn">
                         <a href="./boloIndia/home.html" class="nav-link" style="color:#959595;font-size:20px">
                             <span class="material-icons" style="vertical-align:sub">
