--- a/crowdsource-ui/src/views/common/moduleIntro/moduleIntro.ejs
+++ b/crowdsource-ui/src/views/common/moduleIntro/moduleIntro.ejs
@@ -1,17 +1,15 @@
-<div class="row w-100 m-auto" style="max-width:1350px">
-    <div class="col-12 mt-4">
-        <div class="" style="padding:20px">
-            <h1>
+<div class="col-lg-10 col-md-12 col-12 mt-4 mx-lg-auto p-5">
+        <div class="row">
+            <h1 class="col-12">
                 <%= __(name) %>
             </h1>
-            <p>
+            <p class="col-12">
                 <%= __(intro) %>
             </p>
         </div>
-        <div class="row mr-0 col-12 ml-0 pl-lg-4 pl-md-4 p-0">
+        <div class="row" style="padding:0 15px">
             <div class="col-4" style="border-bottom:2px solid #f49608"></div>
             <div class="col-4" style="border-bottom:2px solid #4d82f7"></div>
             <div class="col-4" style="border-bottom:2px solid #42bf2e"></div>
         </div>
-    </div>
 </div>
