Ayush | Fix close expand view modal

--- a/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
@@ -139,7 +139,7 @@
             <%- include ../common/virtualKeyboardBtn.ejs %>
         </div>
 
-        <script>var modal=document.getElementById("myModal"),clickExpandBtn=document.getElementById("expand-view"),img=document.getElementById("view-image"),modalImg=document.getElementById("img01"),captionText=document.getElementById("caption");clickExpandBtn.onclick=function(){modal.style.display="block",modalImg.src=img.src};var span=document.getElementsByClassName("close")[0];span.onclick=function(){modal.style.display="none"}</script>
+        <script>var modal=document.getElementById("myModal"),clickExpandBtn=document.getElementById("expand-view"),img=document.getElementById("view-image"),modalImg=document.getElementById("img01"),captionText=document.getElementById("caption");clickExpandBtn.onclick=function(){modal.style.display="block",modalImg.src=img.src};var span=document.getElementsByClassName("close-validate")[0];span.onclick=function(){modal.style.display="none"}</script>
 
         <%- include('../common/report.ejs',{reportPara: "Help us understand what’s wrong with the image labelled", reportThankYou: "Your feedback helps us keep Dekho India relevant, we appreciate you taking time to leave the feedback.", "REPORT":[{h1:"Offensive",p1:"Hateful / Discriminatory / Vulgar language, drugs promotion etc."}]}); %>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
