| Priyanshu | fix header css

--- a/crowdsource-ui/src/views/badge-info.ejs
+++ b/crowdsource-ui/src/views/badge-info.ejs
@@ -38,7 +38,7 @@
             <tr>
                 <th scope="col "><%= __('Level') %></th>
                 <th scope="col ">
-                    <p class="mb-0"><%= __('Contributions') %><br><%= __('(Recording + Validating)')%> </p>
+                    <p class="mb-0"><%= __('Contributions') %><br><%= __('(Recording)')%> </p>
                 </th>
                 <th scope="col "><%= __('Badge') %></th>
             </tr>
