--- a/crowdsource-ui/src/views/common/headerForContributor.ejs
+++ b/crowdsource-ui/src/views/common/headerForContributor.ejs
@@ -5,7 +5,7 @@
                 <img src="../img/BoloIndiaLogo.png" alt="Meity Logo" width="64px" height="54px">
             </h2>
         </a>
-        <div class="version-beta">Beta</div>
+        <div class="version-beta ml-4">Beta</div>
     </div>
     <div class="row ml-4 border-left d-none-mob">
         <p class="m-0" style="padding-right:21px;padding-left:20px"><%= __(MODULE) %></p>
