--- a/crowdsource-ui/src/views/common/header/header.ejs
+++ b/crowdsource-ui/src/views/common/header/header.ejs
@@ -6,7 +6,7 @@
                 <img src="../../img/BoloIndiaLogo.png" alt="Meity Logo" width="64px" height="54px">
             </h2>
         </a>
-        <div class="version-beta">Beta</div>
+        <div class="version-beta ml-4">Beta</div>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
