--- a/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
@@ -93,24 +93,12 @@
                 </div>
             </div>
 
-            <div class="row mt-5 justify-content-center mx-0" id="validation-button-row">
-                <button class="btn align-self-start mb-2" id="cancel-edit-button" disabled="disabled">
-                    <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
-                        <text x="65" y="43" font-family="lato" font-size="24" fill="#343A40" style="text-align:center">
+            <div class="row mt-5 justify-content-center mx-4 mb-2" id="validation-button-row">
+                <button class="col-12 col-md-4 btn btn-outline-primary rounded-pill align-self-start mr-md-5 mb-3 mb-md-0 p-3" style="border-radius:50px;font-size:24px;border:2px solid #007bff" id="cancel-edit-button" disabled="disabled">
                             <%= __('Cancel') %>
-                        </text>
-                    </svg>
                 </button>
-                <button class="btn web-view"></button>
-                <button class="btn align-self-start mb-2 pl-4" id="submit-edit-button">
-                    <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect width="208" height="66" rx="33" fill="#D7D7D7"/>
-                        <text x="65" y="43" font-family="lato" font-size="24" fill="white" style="text-align:center">
+                <button class="col-12 col-md-4 btn btn-outline-primary rounded-pill align-self-start ml-md-5 mt-3 mt-md-0 p-3" style="border-radius:50px;font-size:24px;border:2px solid #007bff" id="submit-edit-button" disabled="disabled">
                             <%= __('Submit') %>
-                        </text>
-                    </svg>
-
                 </button>
             </div>
 
