--- a/crowdsource-ui/src/assets/css/common.css
+++ b/crowdsource-ui/src/assets/css/common.css
@@ -204,6 +204,12 @@ body {
  .btn-link:hover {
   text-decoration: none;
 }
+
+.btn-recording {
+  border-radius:50px;
+  font-size:24px;
+  border:2px solid #007bff
+}
 }
 
 @media (max-width: 600px) {
@@ -212,6 +218,12 @@ body {
   }
   .d-xs-block {
     display: block !important;
+  }
+  .btn-recording {
+    border-radius:50px;
+    font-size:20px;
+    border:2px solid #007bff;
+    min-height: 48px;
   }
 }
 
