--- a/crowdsource-ui/src/views/record.ejs
+++ b/crowdsource-ui/src/views/record.ejs
@@ -74,13 +74,13 @@
             </div>
             <div class="row justify-content-center align-items-center mb-5 mt-lg-5" id="startRecordRow">
                 <div class="col-xl-2 col-md-4 col-sm-12 col-xs-12 col-lg-3 mx-4 mr-md-5 px-0 pb-3 pb-md-0">
-                    <button type="button" class="btn btn-outline-primary text-primary w-100 p-3" id="startRecord" style="border-radius:50px;font-size:24px;border:2px solid #007bff"> <%= __('Start Recording') %> </button>
-                    <button type="button" id="stopRecord" class="d-none btn btn-outline-primary text-primary w-100 p-3" style="border-radius:50px;font-size:24px;border:2px solid #007bff"> <%= __('Stop Recording') %> </button>
-                    <button type="button" id="reRecord" class="d-none btn btn-outline-primary text-primary w-100 p-3" style="border-radius:50px;font-size:24px;border:2px solid #007bff"> <%= __('Re-record') %> </button>
+                    <button type="button" class="btn btn-outline-primary text-primary w-100 p-2 btn-recording" id="startRecord"> <%= __('Start Recording') %> </button>
+                    <button type="button" id="stopRecord" class="d-none btn btn-outline-primary text-primary w-100 p-2 btn-recording"> <%= __('Stop Recording') %> </button>
+                    <button type="button" id="reRecord" class="d-none btn btn-outline-primary text-primary w-100 p-2 btn-recording"> <%= __('Re-record') %> </button>
                 </div>
                 <div class="col-xl-2 col-md-4 col-sm-12 col-xs-12 col-lg-3 mx-4 ml-md-5 px-0 pt-3 pt-md-0">
 
-                        <button id="nextBtn" class="btn btn-secondary w-100 p-3 point-none" disabled="disabled" style="border-radius:50px;font-size:24px;opacity:.3"> <%= __('Submit') %> </button>
+                        <button id="nextBtn" class="btn btn-secondary w-100 p-2 point-none btn-recording" disabled="disabled" style="opacity:.3"> <%= __('Submit') %> </button>
 
                 </div>
             </div>
