Ayush | Fixed mobile design issues

--- a/crowdsource-ui/src/assets/css/common.css
+++ b/crowdsource-ui/src/assets/css/common.css
@@ -181,7 +181,12 @@ body {
     height: 50px;
     width: 50px;
   }
-
+  .btn-recording {
+    border-radius:50px;
+    font-size:20px;
+    border:2px solid #007bff;
+    min-height: 48px;
+  }
 }
 
 @media (min-width: 767px) {
