--- a/crowdsource-ui/src/views/modals/profanity-speaker-detail.ejs
+++ b/crowdsource-ui/src/views/modals/profanity-speaker-detail.ejs
@@ -35,7 +35,7 @@
                 <div class="row justify-content-center mt-4">
                     <div class="col-12" data-toggle="tooltip" title="<%= __('Please validate any error message before proceeding')%>">
                         <button type="button" id="proceed-box" class="btn btn-primary h6 shadow w-100 rounded p-2" data-toggle="modal" data-target="#languageModal">
-                            <%= __('LET\'S GO') %>
+                            <%= __('Let\'s Go') %>
                         </button></div>
                 </div>
             </div>
