--- a/crowdsource-ui/src/views/modals/speakerDetail.ejs
+++ b/crowdsource-ui/src/views/modals/speakerDetail.ejs
@@ -98,7 +98,7 @@
                 </div>
                 <div class="row justify-content-center mt-3">
                     <div class="col-12" data-toggle="tooltip" title="<%= __('Please validate any error message before proceeding')%>"><button type="button" id="proceed-box" class="btn btn-primary h6 shadow w-100 rounded-pill p-3" data-toggle="modal" data-target="#languageModal">
-                            <%= __('LET\'S GO') %>
+                            <%= __('Let\'s Go') %>
                         </button></div>
                 </div>
             </div>
