--- a/crowdsource-ui/src/views/modules/boloIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/boloIndia/home/home.ejs
@@ -200,7 +200,7 @@
                 </div>
                 <div class="row justify-content-center mt-3">
                     <div class="col-12" data-toggle="tooltip" title="<%= __('Please validate any error message before proceeding')%>"><button type="button" id="bolo-proceed-box" class="btn btn-primary h6 shadow w-100 rounded p-3">
-                            <%= __('LET\'S GO') %>
+                            <%= __('Let\'s Go') %>
                         </button></div>
                 </div>
             </div>
