--- a/crowdsource-ui/src/views/common/card/card.css
+++ b/crowdsource-ui/src/views/common/card/card.css
@@ -9,7 +9,7 @@
     }
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     #start_recording, #start_validating {
         width: 100px;
     }
@@ -72,7 +72,7 @@
     mix-blend-mode: normal;
     box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
-    min-height: 100px;
+    min-height: 190px;
     background-repeat: no-repeat;
 }
 
